# pySigma-backend-securityonion

./: .gitignore  LICENSE  README.md  pyproject.toml
sigma/backends/SecurityOnion/: SecurityOnion.py  __init__.py
sigma/pipelines/SecurityOnion/: SecurityOnion.py  __init__.py
tests/: test_backend_SecurityOnion.py
